# eyegrade

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.TXT  CNAME  Changelog  README  README.md  documentation.html  documentation.txt  download.html  download.txt  eyegrade.css  index.html  index.txt  quick-start-guide.html  quick-start-guide.rst  requirements-dev.txt  requirements.txt  robots.txt  setup.cfg  setup.py  sitemap.xml  sitemapindex.xml
blog/: archive.html  index-1.html  index-2.html  index.html  rss.xml  sitemap.xml
development-tools/: gettext-compile.sh  gettext-update.sh
doc/: camgrade.cfg.sample  exam-data.sample  eyegrade.cfg.sample  install.txt  sample-answer-sheet-template.tex  sample-exam-questions.xml  sample-student-list.txt  scratch-book.txt  user-manual.txt
documentation/: index.html  index.txt
download/: index.html  index.txt
eyegrade/: __main__.py  analysis.py  app.py  capture.py  create_exam.py  cvwrapper.py  detection.py  exammaker.py  examparser.py  exams.py  export.py  eyegrade.py  geometry.py  imageproc.py  images.py  mix_grades.py  modify_results.py  ocr.py  opencvcompat.py  scoring.py  sessiondb.py  setup.py  students.py  utils.py
galleries/: index.html  rss.xml
pyinstaller/: eyegrade.spec
quick-start-guide/: index.html  index.rst
sample-answer-sheet/: sample-answer-sheet-45.tex  sample-answer-sheet-72.tex  sample-answer-sheet-small.tex  sample-answer-sheet.tex  sample-exam-data-36.cfg
sample-answer-sheets/: logo-uc3m.eps  sample-answer-sheet-60.tex  sample-exam-data-20.cfg  sample-exam-data-45.cfg  sample-exam-data-5.cfg  sample-exam-data-60.cfg  sample-exam-data-72.cfg
(+284 files in other folders)
