[metadata]
    name = eyegrade
    description = "Grade MCQ exams with a webcam"
    long_description = file: README.md
    long_description_content_type = text/markdown
    version = 0.9rc2
    author = Jesus Arias Fisteus
    author_email = jfisteus@gmail.com
    url = https://www.eyegrade.org/
    classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: X11 Applications :: Qt
        Intended Audience :: Education
        License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
        Natural Language :: Spanish
        Natural Language :: English
        Natural Language :: Galician
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3 :: Only
        Topic :: Education

[options]
install_requires =
    opencv-python==4.5.5.62
    openpyxl==3.0.9
    PyQt5==5.14.1
setup_requires =
    setuptools >= 59.4.0
python_requires = >= 3.6
packages = find:
test_suite = tests.get_tests

[options.package_data]
eyegrade = data/*, data/svm/*, data/locale/*/LC_MESSAGES/eyegrade.mo

[options.entry_points]
gui_scripts =
    eyegrade = eyegrade.eyegrade:main
console_scripts =
    eyegrade-create = eyegrade.create.create:main
